--- a/Settings.ini
+++ b/Settings.ini
@@ -14,9 +14,8 @@ hydropost = 76289
 h = 0.00008
 end_date = 2020-05-03
 selectedcols = Уровень воды,Температура воздуха,Атмосферное давление,Скорость ветра
-restore_data = iter
-save_restored_data = on
-merge_missing_dates = on
+restore_data = Off
+sql_reading = on
 model_name = model-5days.h5
 
 [Autotest]
