--- a/Settings.ini
+++ b/Settings.ini
@@ -14,7 +14,7 @@ hydropost = 76289
 h = 0.00008
 end_date = 2020-05-03
 selectedcols = Уровень воды,Температура воздуха,Атмосферное давление,Скорость ветра
-restore_data = Off
+restore_data = iter
 sql_reading = on
 model_name = model-5days.h5
 
