--- a/Settings.ini
+++ b/Settings.ini
@@ -1,23 +1,8 @@
 [Settings]
-epoch = 180
 pathtofile = Urovni2_1_1_new.xlsx
-activationfuncinhidelayer = sigmoid
-activationfuncinoutputlayer = linear
-validationsize = 0.2
-fd = 5
-fh = 5
-inputunits = 30
-hideunits = 10
-batchsize = 10
-funcerror = mse
-hydropost = 76289
-h = 0.00008
 end_date = 2020-05-03
-selectedcols = Уровень воды,Температура воздуха,Атмосферное давление,Скорость ветра
+selectedcols = Уровень воды,Температура воздуха
 restore_data = iter
 sql_reading = on
-model_name = model-5days.h5
-
-[Autotest]
-data_begin = 2020-04-08
-data_last = 2020-05-03
+hydropost = 76289
+merge_missing_dates = on
