--- a/Settings.ini
+++ b/Settings.ini
@@ -1,7 +1,7 @@
 [Settings]
 pathtofile = Urovni2_1_1_new.xlsx
 end_date = 2020-05-03
-selectedcols = Уровень воды,Температура воздуха
+selectedcols = Уровень воды,Температура воздуха,Атмосферное давление,Скорость ветра,Дата - время
 restore_data = iter
 sql_reading = on
 hydropost = 76289
