--- a/Settings.ini
+++ b/Settings.ini
@@ -1,8 +1,8 @@
 [Settings]
 pathtofile = Urovni2_1_1_new.xlsx
 end_date = 2020-05-03
-selectedcols = Уровень воды,Температура воздуха,Атмосферное давление,Скорость ветра,Дата - время
-restore_data = iter
+selectedcols = Уровень воды,Температура воздуха
+restore_data = naive_bayes
 sql_reading = on
 hydropost = 76289
 merge_missing_dates = on
