--- a/Settings.ini
+++ b/Settings.ini
@@ -1,11 +1,12 @@
 [Settings]
 pathtofile = Urovni2_1_1_new.xlsx
 end_date = 2020-05-03
-selectedcols = Уровень воды,Температура воздуха
+selectedcols = Уровень воды
 restore_data = naive_bayes
 sql_reading = on
-hydropost = 76289
+hydropost = 76288
 merge_missing_dates = on
 selection_size = 8
 predict_size = 5
 test_selection_size = 0.01
+save_restore_results = off
