--- a/Settings.ini
+++ b/Settings.ini
@@ -2,7 +2,7 @@
 pathtofile = Urovni2_1_1_new.xlsx
 end_date = 2021-05-03
 selectedcols = Уровень воды,
-restore_data = pandas
+restore_data = lr
 sql_reading = on
 hydropost = 76289
 merge_missing_dates = on
