New test function

--- a/Settings.ini
+++ b/Settings.ini
@@ -1,15 +1,15 @@
 [Settings]
 pathtofile = Urovni2_1_1_new.xlsx
 end_date = 2021-05-03
-selectedcols = Уровень воды,
-restore_data = lr
+selectedcols = Уровень воды
+restore_data = off
 sql_reading = on
-hydropost = 76289
+hydropost = 76288
 merge_missing_dates = on
-selection_size = 12
+selection_size = 5
 predict_size = 5
 test_selection_size = 0.01
 save_restore_results = off
 [Test]
 test_selection_size = 0.03
-selection_pos = 2
+selection_pos = 1
